--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -144,10 +144,13 @@ function tr($string,$ret=false) {
 <? if ( is_file("$docroot/plugins/dynamix/styles/community.applications-$theme.css") ):?>
   <link type='text/css' rel='stylesheet' href='<?=autov("/plugins/dynamix/styles/community.applications-$theme.css")?>'>
 <? endif; ?>
+<script src='<?autov("/plugins/community.applications/javascript/helpers.js")?>'></script>
 <script src='<?autov("/plugins/community.applications/javascript/libraries.js")?>'></script>
 <script src='<?autov("/plugins/dynamix.docker.manager/javascript/docker.js")?>'></script>
 
 <script>
+
+var execURL = "/plugins/<?=$plugin?>/include/exec.php";
 
 var searchBoxInput;
 var searchBoxAwesomplete;
@@ -176,7 +179,6 @@ var dockerNotEnabled;
 var postCount = 0;
 var cookieWarning = false;
 var dockerWarningAdded = false;
-// var backupServerWarning = false;  Should no longer be required as concept of backup server isn't relevant anymore
 var restoreStateMenu = false;
 var actionCentreRestoreState = false;
 var initialStartup = true;
@@ -329,7 +331,7 @@ $(function(){
 });
   <?else:?>
   // don't run this through the wrapper so that if it hangs up it won't delay anything else
-  $.post("/plugins/<?=$plugin?>/include/exec.php",{action:'getPortsInUse'},function(data) {
+  $.post(execURL,{action:'getPortsInUse'},function(data) {
     console.log(data);
     var ret = JSON.parse(data);
     portsInUse = ret.portsInUse;
@@ -561,7 +563,7 @@ $(function(){
 
       var apppath = $(this).data("apppath");
       var appname = $(this).data("appname");
-      appname = stripTags(appname);
+      appname = appname.stripTags();
       if ( !apppath || !appname ) return;
       showSidebarApp(apppath,appname);
     }
@@ -991,13 +993,6 @@ function updateContent(button) {
   });
 }
 
-function stripTags(string) {
-  if ( ! string )
-    string = "";
-
-  return string.replace(/(<([^>]+)>)/ig,"");
-}
-
 function showSpecialCategory(button) {
   var sortButton = false;
   $(".sortIcons").each(function() {
@@ -1048,34 +1043,9 @@ function swalBackground(color) {
   $(".sweet-alert").css("background-color",color);
 }
 
-function myAlert(description,textdescription,textimage,imagesize, outsideClick, showCancel, showConfirm, alertType) {
-  if ( !outsideClick ) outsideClick = false;
-  if ( !showCancel )   showCancel = false;
-  if ( !showConfirm )  showConfirm = false;
-  if ( imagesize == "" ) { imagesize = "80"; }
-  disableSearch();
 
-  swal({
-    title: description,
-    text: textdescription,
-    allowOutsideClick: outsideClick,
-    showConfirmButton: showConfirm,
-    showCancelButton: showCancel,
-    cancelButtonText: "<?tr("Cancel")?>",
-    type: alertType,
-    animation: false,
-    html: true
-  });
-}
 
-function mySpinner() {
-  $("div.spinner").show();
-  $(".spinnerBackground").show();
-}
 
-function myCloseSpinner() {
-  $("div.spinner,.spinnerBackground").hide();
-}
 
 function myCloseAlert() {
   swal.close();
@@ -1102,7 +1072,7 @@ function doSearch(button,newSearch) {
   }
   var filter = $('#searchBox').val();
   filter = $.trim(filter);
-  filter = stripTags(filter);
+  filter = filter.stripTags();
   if ( ! filter ) {
     $("#searchBox").val(filter);
     data.searchInProgress = false;
@@ -1161,13 +1131,7 @@ function doSearch(button,newSearch) {
   });
 }
 
-function enableButtons() {
-  data.selected_category = "";
-}
 
-function refreshDisplay() {
-  changeSortOrder(null,null,null);
-}
 
 function changeSortOrder(button,buttonClass,previousApps) {
   var pageNumber = data.currentpage;
@@ -1445,7 +1409,7 @@ function OpenSidebarAndRefreshDisplay() {
       var apppath = $.cookie("sidebarAppPath");
       var appname = $.cookie("sidebarAppName");
 
-      appname = stripTags(appname);
+      appname = appname.stripTags();
 
       refreshDisplay();
       if ( $.trim(apppath) ) {
@@ -1529,10 +1493,7 @@ function actionCentre() {
   } else {
     getPrevApps("action");
   }
-
-
 }
-
 
 function getPrevApps(installed,filter,dontClear) {
   post({action:'previous_apps',installed:installed,filter:filter},function(result) {
@@ -1642,10 +1603,6 @@ function postUninstallPlugin() {
   enableSearch();
   $(".selectedMenu").trigger("click");
   setupActionCentre();
-}
-
-String.prototype.basename = function() {
-  return this.split('/').reverse()[0];
 }
 
 function uninstallDocker(application,humanName) {
@@ -1846,9 +1803,7 @@ function displayTags(leadTemplate,rename=false,comment="",ports="") {
   }
 }
 
-function makePlural(string,count) {
-  return ( (count > 1) || (count == 0) ) ? string + "s" : string;
-}
+
 function selectAllPrevious() {
   $(".ca_multiselect").each(function() {
     $(this).prop("checked",true);
@@ -1906,22 +1861,12 @@ function getSelectedApps() {
       }
     }
   });
-  selected.docker = uniqueArrayElements(docker);
-  selected.plugin = uniqueArrayElements(plugin);
-  selected.language = uniqueArrayElements(language);
-  selected.deletePaths = uniqueArrayElements(deletePaths);
+  selected.docker = docker.uniqueArrayElements();
+  selected.plugin = plugin.uniqueArrayElements();
+  selected.language = language.uniqueArrayElements();
+  selected.deletePaths = deletePaths.uniqueArrayElements();
   data.selected = JSON.stringify(selected);
   return selected;
-}
-
-function uniqueArrayElements(sourceArray) {
-  var uniqueEntries = new Array();
-  $.each(sourceArray, function(i, el) {
-    if ($.inArray(el,uniqueEntries) === -1) {
-      uniqueEntries.push(el)
-    }
-  });
-  return uniqueEntries;
 }
 
 function enableMultiInstall() {
@@ -1951,13 +1896,6 @@ function clearMultiInstall() {
   enableMultiInstall();
 }
 
-function installSort(a,b) {
-  if (a[0] === b[0]) {
-    return 0;
-  } else {
-    return (a[0] < b[0]) ? -1 : 1;
-  }
-}
 
 function deleteMulti() {
   var selected = getSelectedApps();
@@ -2071,9 +2009,7 @@ function installMultiPluginUpdatesAfterDocker() {
   },1000);
 }
 
-function reloadPage() {
-  location.reload();
-}
+
 function installMulti() {
   var docker = new Array();
   var pluginArray = new Array();
@@ -2209,31 +2145,19 @@ function updateDisplay(content) {
       $(this).html(description + "... <span class='card_readmore'>"+readMoreText+"</span>");
     }
   });
-  $(".ca_applicationName").each(function() {
-    var newSize = 100;
-    while (isOverflown(this)) {
-      var existingSize = $(this).css("font-size");
-      var size = parseInt(existingSize);
-      if ( size == newSize + 1 ) {  // looks like browsers in Chinese have a minimum enforced font-size
-        break;
-      }
-      var newSize = size - 1;
-      if (newSize == 8)
-        break;
 
-      $(this).css("font-size",newSize+"px");
-    }
-  });
-  $(".betaPopupText,.installedCardText,.upgradePopupText,.ltofficialPopupText").each(function() {
+  $(".betaPopupText,.installedCardText,.upgradePopupText,.ltofficialPopupText,.ca_applicationName").each(function() {
     var newSize = 100;
-    while (isOverflown(this,true)) {
+    var minSize = $(this).hasClass("ca_applicationName") ? 8 : 0;
+    var overflowType = ! $(this).hasClass("ca_applicationName");
+    while (isOverflown(this,overflowType)) {
       var existingSize = $(this).css("font-size");
       var size = parseInt(existingSize);
       if ( size == newSize + 1 ) {  // looks like browsers in Chinese have a minimum enforced font-size
         break;
       }
       var newSize = size - 1;
-      if (newSize == 0)
+      if (newSize == minSize)
         break;
 
       $(this).css("font-size",newSize+"px");
@@ -2256,14 +2180,7 @@ function updateDisplay(content) {
   }
 }
 
-function isOverflown(el,type=false){
-  if (type)
-    return (el.scrollWidth > el.clientWidth);
-  else
-    return (el.scrollHeight > el.clientHeight);
 
-  return (el.scrollHeight > el.clientHeight) || (el.scrollWidth > el.clientWidth)||(el.offsetWidth < el.scrollWidth);
-}
 
 function saveState() {
   console.log("Save State");
@@ -2325,22 +2242,6 @@ function restoreState() {
 
 }
 
-function disableSearch() {
-  $("#searchBox").prop("disabled",true);
-}
-
-function enableSearch() {
-  $("#searchBox").prop("disabled",false);
-}
-
-function evaluateBoolean(str) {
-  regex=/^\s*(true|1|on)\s*$/i
-  return regex.test(str);
-}
-
-function cookiesEnabled() {
-  return evaluateBoolean(navigator.cookieEnabled);
-}
 
 function showCredits() {
   $(".multi_installDiv,.dockerSearch").hide();
@@ -2368,9 +2269,6 @@ function caChangeLog() {
   });
 }
 
-function scrollToTop() {
-  $('html,body').animate({scrollTop:0},0);
-}
 
 function addDockerWarning(enableDisable) {
   if (enableDisable) {
@@ -2401,168 +2299,6 @@ function addDockerWarning(enableDisable) {
   }
 }
 
-String.prototype.escapeHTML = function() {
-  return this.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
-}
-
-function postNoSpin(options,callback) {
-  var URL = "/plugins/<?=$plugin?>/include/exec.php";
-
-  if ( typeof options === "function" ) {
-    callback = options;
-  } else {
-    var msg = "No Spin Post: ";
-    console.log(msg+JSON.stringify(options));
-  }
-  var URL = "/plugins/<?=$plugin?>/include/exec.php";
-
-  if ( typeof options === "function" ) {
-    callback = options;
-  }
-  if ( typeof callback === "function" ) {
-    $.post(URL,options,function(retval){
-      try {
-        var result = JSON.parse(retval);
-        if (result.error) {
-          alert(result.error);
-        }
-      } catch(e) {
-        myCloseAlert();
-        myCloseSpinner();
-        var retvalTest = $.trim(retval);
-        if ( ! retvalTest ) {
-          retval = "<?tr("No data was returned.  It is probable that another browser session has rebooted your server.  Reloading this browser tab will probably fix this error")?>";
-        }
-        if ( retvalTest.indexOf("<!DOCTYPE html>") === 0 ) {
-          data.loggedOut = true;
-          alert("<?tr("You have been logged out")?>");
-          window.location.reload();
-        }	else {
-          $("#templates_content").html(sprintf(tr("Something really wrong went on during %s"),options.action)+"<br><?tr("Post the ENTIRE contents of this message in the Community Applications Support Thread")?>  <a href='https://forums.unraid.net/topic/38582-plug-in-community-applications/' target='_blank'>https://forums.unraid.net/topic/38582-plug-in-community-applications/</a><br><br>OS: <?=$unRaidSettings['version']?> <?=$md5Error ? "<br>Modified CA" : ""?><br>Browser: <?=$_SERVER['HTTP_USER_AGENT']?><br>Language: <?=$_SESSION['locale']?><br><br>"+retval.escapeHTML());
-          throw new Error("Something went badly wrong!"+options.action);
-        }
-      }
-
-      try {
-        eval(callback(result));
-      } catch(e) {
-        if ( ! data.loggedOut ) {
-          post({action:'javascriptError',postCall:options.action,retval:result});
-          alert("Fatal error during "+options.action+" "+e);
-        }
-      }
-      if (result.script) {
-        try {
-          eval(result.script);
-        } catch(e) {
-          alert("Could not execute Script "+e);
-        }
-      }
-    });
-  } else {
-    $.post(URL,options);
-  }
-}
-function post(options,callback) {
-  var URL = "/plugins/<?=$plugin?>/include/exec.php";
-
-  if ( typeof options === "function" ) {
-    callback = options;
-  } else {
-    var msg = postCount > 0 ? "Embedded Post: " : "Post: ";
-    console.log(msg+JSON.stringify(options));
-  }
-
-  if ( postCount == 0 && ! options.noSpinner ) {
-    mySpinner();
-  }
-  postCount++;
-  console.log("Post Count: "+postCount);
-  if ( typeof callback === "function" ) {
-    $.post(URL,options,function(retval){
-      try {
-        var result = JSON.parse(retval);
-        if (result.error) {
-          alert(result.error);
-        }
-      } catch(e) {
-        myCloseAlert();
-        myCloseSpinner();
-        var retvalTest = $.trim(retval);
-        if ( ! retvalTest ) {
-          retval = "<?tr("No data was returned.  It is probable that another browser session has rebooted your server.  Reloading this browser tab will probably fix this error")?>";
-        }
-        if ( retvalTest.indexOf("<!DOCTYPE html>") === 0 ) {
-          data.loggedOut = true;
-          window.location.reload();
-        }	else {
-          $("#templates_content").html(sprintf(tr("Something really wrong went on during %s"),options.action)+"<br><?tr("Post the ENTIRE contents of this message in the Community Applications Support Thread")?>  <a href='https://forums.unraid.net/topic/38582-plug-in-community-applications/' target='_blank'>https://forums.unraid.net/topic/38582-plug-in-community-applications/</a><br><br>OS: <?=$unRaidSettings['version']?> <?=$md5Error ? "<br>Modified CA" : ""?><br>Browser: <?=$_SERVER['HTTP_USER_AGENT']?><br>Language: <?=$_SESSION['locale']?><br><br>"+retval.escapeHTML());
-          throw new Error("Something went badly wrong!"+options.action);
-        }
-      }
-
-      try {
-        eval(callback(result));
-      } catch(e) {
-        if ( ! data.loggedOut ) {
-          post({action:'javascriptError',postCall:options.action,retval:result});
-          alert("Fatal error during "+options.action+" "+e);
-        }
-      }
-      if (result.script) {
-        try {
-          eval(result.script);
-        } catch(e) {
-          alert("Could not execute Script "+e);
-        }
-      }
-      if (result.globalScript) {
-        try {
-          eval(result.globalScript);
-        } catch(e) {
-          alert("Could not execute Script "+e);
-        }
-      }
-      postCount--;
-      if (postCount < 0) postCount = 0;
-      if ( postCount == 0 && ! options.noSpinner) {
-        myCloseSpinner();
-      }
-    }).fail(function(){
-      myCloseSpinner();
-      swal({
-        title: '<?tr("Browser failed to communicate with Unraid Server")?>',
-        text: '<?tr('For unknown reasons, your browser was unable to communicate with Community Applications running on your server.')?>',
-        html: true,
-        type: 'error',
-        showCancelButton: false,
-        showConfirmButton: true,
-        confirmButtonText: "<?tr('Attempt to Fix Via Reload Page')?>"
-      }, function (isConfirm) {
-        if ( isConfirm ) {
-          window.location.reload();
-        }
-      });
-    });
-  } else {
-    $.post(URL,options);
-    postCount--;
-    if ( postCount < 0 ) postCount = 0;
-    if ( postCount == 0) {
-      myCloseSpinner();
-    }
-  }
-  if ( ! cookiesEnabled() ) {
-    if ( cookieWarning === false) {
-      cookieWarning = addBannerWarning("<?tr("Community Applications works best when cookies are enabled in your browser.  Certain features may not be available.")?>");
-    }
-  } else {
-    if ( cookieWarning !== false ) {
-      removeBannerWarning(cookieWarning);
-      cookieWarning = false;
-    }
-  }
-}
 
 function setFavRepoSearch() {
   post({action:'getFavourite'},function(result) {
@@ -2645,13 +2381,6 @@ function feedWarning(currentServer) {
   }
 }
 
-function tr(string) {
-  <?if ( ! ($_SESSION['locale'] == "" || $_SESSION['locale'] == "en_US") ) : ?>
-    return _(string);
-  <?else: ?>
-    return string;
-  <?endif;?>
-}
 
 function CAswitchLanguage(language) {
   if ( language == "en_US" || ! language)
@@ -3258,7 +2987,7 @@ function getPerPageOpts(value) {
 function setupActionCentre() {
   // set up action centre - run in background without tying anything up
   var acBanner = false;
-  $.post("/plugins/<?=$plugin?>/include/exec.php",{action:'enableActionCentre'},function(data) {
+  $.post(execURL,{action:'enableActionCentre'},function(data) {
     var ret = JSON.parse(data);
     if ( ret.status == "action" ) {
       if ( !$(".actionCentre").is(":visible") ) {
@@ -3279,6 +3008,10 @@ function postCheckForUpdates() {
   setupActionCentre();
   $(".selectedMenu").click();
 }
+
+
+
+
 </script>
 
 <?include "/usr/local/emhttp/plugins/$plugin/skins/Narrow/skin.html"?>
