--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -5,12 +5,15 @@ Tabs="true"
 Code="f0db"
 ---
 <?
-###############################################################
-#                                                             #
-# Community Applications copyright 2015-2024, Andrew Zawadzki #
-#                   Licenced under GPLv2                      #
-#                                                             #
-###############################################################
+########################################
+#                                      #
+# Community Applications               #
+# Copyright 2020-2024, Lime Technology #
+# Copyright 2015-2024, Andrew Zawadzki #
+#                                      #
+# Licenced under GPLv2                 #
+#                                      #
+########################################
 
 $_SESSION['locale'] = $_SESSION['locale'] ?? null;
 $docroot = $docroot ?? $_SERVER['DOCUMENT_ROOT'] ?: "/usr/local/emhttp";
