--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CA_notices.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CA_notices.page
@@ -2,12 +2,15 @@ Menu='Buttons'
 Link='nav-user'
 ---
 <?
-###############################################################
-#                                                             #
-# Community Applications copyright 2015-2024, Andrew Zawadzki #
-#                   Licenced under GPLv2                      #
-#                                                             #
-###############################################################
+########################################
+#                                      #
+# Community Applications               #
+# Copyright 2020-2024, Lime Technology #
+# Copyright 2015-2024, Andrew Zawadzki #
+#                                      #
+# Licenced under GPLv2                 #
+#                                      #
+########################################
 ?>
 
 <?
