--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -101,6 +101,18 @@ _(Disable Mouse Wheel Page Changes)_:
   
 > <?tr("This setting disables using left or right on a mouse wheel to change the page");?>
 
+_(Mouse wheel threshold)_:
+: <input type='number' name='wheelThreshold' class='narrow' min='1' value='<?=$cfg['wheelThreshold']?>'></input>
+_(Browser returned value:)_ <span id='wheelValue'></span>
+
+> <?tr("If you tilt the mouse wheel left or right, the browser returned value will change.  Set the threshold to the value returned.  Note that different browsers and operating systems may return different values")?>
+> <?tr("This is a global value for all devices.  If it causes issues, then disable Mouse Wheel Page Changes")?>
+
+<script>
+addEventListener("wheel",function(event){
+  $('#wheelValue').html(Math.abs(parseInt(event.deltaX)));
+});
+</script>
 
 _(Allow CA to send any emergency notifications)_:
 : <select name='notifications' size='1'>
@@ -112,16 +124,6 @@ _(Allow CA to send any emergency notifications)_:
 > <?tr("1. Known malware and security vulnerabilities within applications");?><br>
 > <?tr("2. Critical security vulnerabilities within Unraid OS");?><br>
 > <?tr("3. Any installed applications which may seriously hinder the operation of your server");?>
-
-<!--
-_(Save CA debugging information)_:
-: <select name='debugging' size='1'>
-  <?=mk_option($cfg['debugging'],"yes",tr("Yes",true))?>
-  <?=mk_option($cfg['debugging'],"no",tr("No",true))?>
-  </select>
-  
-> <?tr("Only enable this when advised to from the author of Community Applications")?>
--->
 
 _(Enable developer mode)_:
 : <select name='dev' size='1'>
