--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -44,7 +44,7 @@ function debug() {
   var localISOTime = (new Date(Date.now() - tzoffset)).toISOString().slice(0, -1);
   var filename='CA-Logging-'+localISOTime.substr(0,16).replace(/[-:]/g,'').replace('T','-')+'.zip';
 
-  $.post('/webGui/include/Download.php',{cmd:'save',file:filename,source:"<?=$caPaths['logging']?>"},function(zip) {
+  $.post('/plugins/community.applications/scripts/debugging.php',{file:filename},function(zip) {
     location = zip;
   });
 }
