fix plugins can't be installed if sidebar never opened

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1404,7 +1404,7 @@ function OpenSidebarAndRefreshDisplay() {
       var apppath = $.cookie("sidebarAppPath");
       var appname = $.cookie("sidebarAppName");
 
-      appname = appname.stripTags();
+      appname = appname ? appname.stripTags() : "";
 
       refreshDisplay();
       if ( $.trim(apppath) ) {
