--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -328,9 +328,7 @@ $(function(){
 
     <?else:?>
   // don't run this through the wrapper so that if it hangs up it won't delay anything else
-  $.post(execURL,{action:'getPortsInUse'},function(data) {
-    console.log(data);
-    var ret = JSON.parse(data);
+  $.post(execURL,{action:'getPortsInUse'},function(ret) {
     portsInUse = ret.portsInUse;
     console.log("Ports In Use:" + portsInUse);
   });
@@ -2971,8 +2969,7 @@ function getPerPageOpts(value) {
 function setupActionCentre() {
   // set up action centre - run in background without tying anything up
   var acBanner = false;
-  $.post(execURL,{action:'enableActionCentre'},function(data) {
-    var ret = JSON.parse(data);
+  $.post(execURL,{action:'enableActionCentre'},function(ret) {
     if ( ret.status == "action" ) {
       if ( !$(".actionCentre").is(":visible") ) {
         if ( ! actionCentreRestoreState ) {
