Fix: Crash with Italian

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -138,7 +138,7 @@ $ServerDateCorrect = checkServerDate() ? "true": "false";
 $startupSearch = htmlspecialchars($_GET['search']??"");
 
 function tr($string,$ret=false) {
-  $string = str_replace('"',"&#34;",str_replace("'","&#39;",_($string)));
+  $string = htmlentities(_($string), ENT_QUOTES);
   if ( $ret )
     return $string;
   else
@@ -260,14 +260,14 @@ $('body').on("click","a,.ca_href", function(e) {
 
       e.preventDefault();
       swal({
-        title: "<?=_('External Link');?>",
-        text: "<span title='"+href+"'><?=_('Clicking OK will take you to a 3rd party website not associated with Limetech');?><br><br><b>"+href+"<br><br><input id='Link_Always_Allow' type='checkbox'></input><?=_('Always Allow');?> "+dom.hostname+"</span>",
+        title: "<?=tr('External Link');?>",
+        text: "<span title='"+href+"'><?=tr('Clicking OK will take you to a 3rd party website not associated with Limetech');?><br><br><b>"+href+"<br><br><input id='Link_Always_Allow' type='checkbox'></input><?=_('Always Allow');?> "+dom.hostname+"</span>",
         html: true,
         type: 'warning',
         showCancelButton: true,
         showConfirmButton: true,
-        cancelButtonText: "<?=_('Cancel');?>",
-        confirmButtonText: "<?=_('OK');?>"
+        cancelButtonText: "<?=tr('Cancel');?>",
+        confirmButtonText: "<?=tr('OK');?>"
       },function(isConfirm) {
         if (isConfirm) {
           if ( $("#Link_Always_Allow").is(":checked") ) {
