--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
@@ -61,7 +61,7 @@ body {
     height: 20rem;
     min-width: 24rem;
     max-width: 24rem;
-    padding: 20px 10px 20px 20px;
+    padding: 1.25rem 0.625rem 1.25rem 1.25rem;
     margin: 0 1rem 1rem 0;
     
     /* Visual */
@@ -640,13 +640,9 @@ body {
   }
   
   .caHomeSpotlight {
-    height: 29rem !important;
+    height: 28rem !important;
   }
-  @media (max-width: 101.5rem) {
-    .caHomeSpotlight {
-      height: 58rem !important;
-    }
-  }
+
 
   .ca_author {
     font-size: 1rem;
