Override footer to remain at bottom in low res

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
@@ -374,6 +374,11 @@ body {
       margin-bottom: 2rem !important;
     }
   }
+  /* Override footer style */
+  #footer {
+    position: fixed !important;
+    bottom: 0;
+  }
   
   /* Awesomplete Autocomplete Component */
   .awesomplete {
